[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[bumpversion:file:citty.py]

[metadata]
name = citty
author = aghast
author_email = aghast@aghast.dev
description=
    citty is CI for your TTY! It's a continuous-integration
    (CI) server that lives in a terminal (TTY) and displays
    colored text to indicate the status of different projects.
version = attr: citty.__version__
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Testing
keywords =
    citty
    ci
    continuous
    integration
    terminal
    tty
py_modules = citty
url = https://gitlab.com/aghast/citty/
project_urls = 
    Documentation = https://gitlab.com/aghast/citty/-/blob/master/README.md#name
    Source Code =  https://gitlab.com/aghast/citty/

[entry_points]
console_scripts =
    citty = citty:main

citty_test_funcs =
    make_test = citty:make_test

